$$SEARCH_META doesn't get set in $searchMeta if no documents are returned from mongot

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.0.3, 4.4.9, 5.0.3-rc0, 5.1.0-rc0
    • Affects Version/s: 5.0.3-rc0, 4.4.9-rc0
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v5.0, v4.4
    • QE 2021-09-06
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Its possible this is because we set $$SEARCH_META at runtime, and since we build the unionWith sub-pipeline before the value is set it remains unset on the copied expression context in the sub-pipeline.

            Assignee:
            Ted Tuckman (Inactive)
            Reporter:
            Ted Tuckman (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: