SERVER-59743 Set SEARCH_META in $unionWith subpipeline

(cherry-picked from commit 2b0d538db8c0c9b9d7992d4489ba7171c721dfb7)
(cherry-picked from commit a7a458ee9a78a3834c7a7f081dcd8bc73f2d0f21)